# portfolio-web

./: Dockerfile  README.md  install_release.sh  package.json  start_server.sh  vite.config.ts
.github/workflows/: build_release.yml  main_build.yaml  server_build.yml  ui_build.yaml
app-ui/: README.md  index.html  install_release.sh  package.json
app-ui/public/cursors/: text-cursor.cur
app-ui/public/markdown/: about-me.md
app-ui/src/: App.vue
app-ui/src/assets/: main.css
app-ui/src/components/win95/: Win95BootScreen.vue  Win95Desktop.vue
app-ui/src/stores/: Win95AppsState.ts  Win95DesktopSelectState.ts  Win95DesktopState.ts  Win95WindowsState.ts
app_ui/: index.html  install_release.sh
app_ui/src/: main.ts
app_ui/src/components/win95/: Win95Desktop.vue
app_ui/src/stores/: Win95DesktopState.ts  Win95TaskbarState.ts
server/: Cargo.toml  start_server.sh
server/src/: main.rs
src/: main.ts
src/assets/: main.css
src/components/win95/: Win95BootScreen.vue  Win95Desktop.vue
src/components/win95/applications/: Win95AboutMeApp.vue  Win95DoomApp.vue  Win95MinesweeperApp.vue  Win95SendMessage.vue  Win95StartApp.vue  Win95TheInternetApp.vue
src/components/win95/base/: Win95AppIcon.vue  Win95Application.vue  Win95DesktopApplication.vue  Win95DesktopIcon.vue  Win95DesktopRedirectIcon.vue  Win95DesktopUserSelect.vue  Win95DottedBorder.vue  Win95EditBox.vue  (+6 more)
src/stores/: Win95AppsState.ts  Win95DesktopApps.ts  Win95DesktopSelectedIconsState.ts  Win95DesktopSelectedState.ts  Win95DesktopState.ts  Win95InternetAppState.ts  Win95WindowsState.ts
(+18 files in other folders)
