[package]
name = "portfolio-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.147"
teloxide = { version = "0.11.1", default-features = false, features = ["rustls"] }
lazy_static = "1.4.0"
dashmap = "5.4.0"
